--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=nunito" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <div class="container-fluid background">
       <div class="col-lg-12" style="padding:10px;">
-        <img src="img/desc.svg" alt="" class="img-responsive desc-img">
+        <img src="/img/desc.svg" alt="" class="img-responsive desc-img">
       </div>
 
       <div class="col-md-4 col-md-offset-4 text-center description">
@@ -24,7 +24,7 @@
       </div>
 
       <div class="col-md-12 text-center">
-        <a href="add.html">
+        <a href="/pages/add.html">
         <span class="btn btn-default get-started-button">Get stared</span>
         </a>
       </div>
