--- a/pages/add.html
+++ b/pages/add.html
@@ -23,7 +23,7 @@
 
 
       <div class="col-md-1 col-sm-12 col-xs-12 sidebar" >
-        <a href="#">
+        <a href="add">
           <div class="col-md-12 col-sm-4 col-xs-4 text-center option active">
             <div class="col-md-12" style="padding:3px">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -88,17 +88,12 @@
 
       </div>
 
-      <div class="col-md-11 col-md-offset-1">
+      <div class="col-md-11 col-md-offset-1 col-sm-12 col-xs-12">
         <div class="row" style="padding:10px;">
 
-          <div class="col-md-10 col-md-push-1" style="margin:0 auto">
+          <div class="col-md-10 col-md-push-1 col-sm-12 col-xs-12" style="margin:0 auto">
             <div class="row">
-              <div class="col-md-12" style="margin-top:10vh">
-
-                  <div class="col-md-2 col-sm-2 col-xs-6">
-                    <label for="">Student No.</label>
-                    <input type="number" id="studentno" class="form-control" name="" value="" >
-                  </div>
+              <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top:10vh">
 
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="">Firstname</label>
@@ -116,27 +111,40 @@
                       <option value="1">Jss1</option>
                       <option value="2">Jss2</option>
                       <option value="3">Jss3</option>
+                      <option value="4">SS1</option>
+                      <option value="5">SS2</option>
+                      <option value="6">SS3</option>
+                    </select>
+                  </div>
+
+                  <div class="col-md-2 col-sm-2 col-xs-6">
+                    <label for="">Grade</label>
+                    <select class="form-control" id="grade">
+                      <option value="1">A1</option>
+                      <option value="2">B2</option>
+                      <option value="3">B3</option>
+                      <option value="4">C4</option>
+                      <option value="5">C5</option>
+                      <option value="6">C6</option>
+                      <option value="7">D7</option>
+                      <option value="8">E8</option>
+                      <option value="9">F9</option>
                     </select>
                   </div>
 
                   <div class="col-md-12 col-xs-12" style="padding-top:20px;">
-                    <input type="submit" onclick="add()" class="btn btn-default col-md-2 col-md-offset-10 col-sm-2 col-sm-offset-5 col-xs-4 col-xs-offset-4 add-button" name="" value="Add">
+                    <input type="button" onclick="add()" class="btn btn-default col-md-2 col-md-offset-10 col-sm-2 col-sm-offset-5 col-xs-4 col-xs-offset-4 gen-button" name="" value="Add">
                   </div>
 
 
-                  <div class="col-md-6 col-md-offset-3 ok" id="ok">
+                  <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12 ok" id="ok" style="margin-top:2vh">
                   <div class="alert alert-success alert-dismissable fade in text-center">
                     <!-- <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> -->
-                    <strong>ADDED</strong> 
+                    <strong>ADDED</strong>
                   </div>
                   </div>
 
-                  <div class="col-md-12 error" id="error">
-                    <div class="alert alert-danger alert-dismissable fade in">
-                      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                      <strong>Danger!</strong> This alert box could indicate a dangerous or potentially negative action.
-                    </div>
-                  </div>
+
               </div>
             </div>
           </div>
