--- a/pages/edit.html
+++ b/pages/edit.html
@@ -27,14 +27,14 @@
           <div class="col-md-12 col-sm-4 col-xs-4 text-center option">
             <div class="col-md-12" style="padding:3px">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                	 width="42.8px" height="31px" viewBox="-371 290.6 42.8 31" style="enable-background:new -371 290.6 42.8 31;"
-                	 xml:space="preserve">
+                   width="42.8px" height="31px" viewBox="-371 290.6 42.8 31" style="enable-background:new -371 290.6 42.8 31;"
+                   xml:space="preserve">
                 <g>
-                	<path class="st0" d="M-349.6,291.1c-8.3,0-15,6.7-15,15c0,8.3,6.7,15,15,15c8.3,0,15-6.7,15-15
-                		C-334.6,297.8-341.3,291.1-349.6,291.1z M-349.6,319.9c-7.7,0-13.8-6.2-13.8-13.8c0-7.7,6.2-13.8,13.8-13.8
-                		c7.7,0,13.8,6.2,13.8,13.8C-335.7,313.7-341.9,319.9-349.6,319.9z"/>
-                	<path class="st0" d="M-342.4,305.5h-6.6v-6.4c0-0.3-0.2-0.6-0.6-0.6s-0.6,0.2-0.6,0.6v6.4h-6.6c-0.3,0-0.6,0.2-0.6,0.6
-                		s0.2,0.6,0.6,0.6h6.6v6.9c0,0.3,0.2,0.6,0.6,0.6s0.6-0.2,0.6-0.6v-6.9h6.6c0.3,0,0.6-0.2,0.6-0.6S-342.1,305.5-342.4,305.5z"/>
+                  <path class="st0" d="M-349.6,291.1c-8.3,0-15,6.7-15,15c0,8.3,6.7,15,15,15c8.3,0,15-6.7,15-15
+                    C-334.6,297.8-341.3,291.1-349.6,291.1z M-349.6,319.9c-7.7,0-13.8-6.2-13.8-13.8c0-7.7,6.2-13.8,13.8-13.8
+                    c7.7,0,13.8,6.2,13.8,13.8C-335.7,313.7-341.9,319.9-349.6,319.9z"/>
+                  <path class="st0" d="M-342.4,305.5h-6.6v-6.4c0-0.3-0.2-0.6-0.6-0.6s-0.6,0.2-0.6,0.6v6.4h-6.6c-0.3,0-0.6,0.2-0.6,0.6
+                    s0.2,0.6,0.6,0.6h6.6v6.9c0,0.3,0.2,0.6,0.6,0.6s0.6-0.2,0.6-0.6v-6.9h6.6c0.3,0,0.6-0.2,0.6-0.6S-342.1,305.5-342.4,305.5z"/>
                 </g>
             </svg>
 
@@ -47,38 +47,37 @@
           <div class="col-md-12 col-xs-4 text-center option active">
             <div class="col-md-12" style="padding:3px">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                	 width="51.5px" height="33.3px" viewBox="-365 292.1 51.5 33.3" style="enable-background:new -365 292.1 51.5 33.3;"
-                	 xml:space="preserve">
+                   width="51.5px" height="33.3px" viewBox="-365 292.1 51.5 33.3" style="enable-background:new -365 292.1 51.5 33.3;"
+                   xml:space="preserve">
 
                 <path class="st0" d="M-327.2,296.6c-1.7-1.7-4.5-1.7-6.2,0l-17.5,17.5l0,0c0,0,0,0,0,0.1c0,0.1-0.1,0.1-0.1,0.1c0,0,0,0,0,0.1l0,0
-                	l-1.7,7.2v0.1l0,0c0,0.1,0,0.1,0,0.1s0,0,0,0.1c0,0.1,0.1,0.1,0.1,0.1c0.1,0.1,0.1,0.1,0.1,0.1c0.1,0,0.1,0.1,0.2,0.1
-                	c0.1,0,0.1,0,0.1,0l7.2-1.7c0,0,0,0,0.1,0c0,0,0,0,0.1,0s0.1-0.1,0.1-0.1s0,0,0.1,0l0,0l17.5-17.5
-                	C-325.5,301.1-325.5,298.3-327.2,296.6z M-327.9,297.3c1.2,1.2,1.3,3.1,0.3,4.4l-4.7-4.7C-331,296-329.1,296.1-327.9,297.3z
-                	 M-330.3,304.5l-4.8-4.8l0.7-0.7l4.8,4.8L-330.3,304.5z M-350.3,319.7c-0.2-0.2-0.5-0.2-0.7,0l-0.4,0.4l1.2-5.2l2.2-0.3l-0.3,2.5
-                	v0.1v0.1c0,0,0,0,0,0.1v0.1c0,0,0,0.1,0.1,0.1c0,0,0,0.1,0.1,0.1l0.1,0.1c0,0,0.1,0,0.1,0.1c0,0,0.1,0,0.1,0h0.1h0.1l0,0l0,0l0,0
-                	l0,0h0.1l2.5-0.3l-0.3,2.2l-5.2,1.2l0.4-0.4C-350.1,320.2-350.1,319.9-350.3,319.7z M-344.2,317l10.8-10.8c0.2-0.2,0.2-0.5,0-0.7
-                	c-0.2-0.2-0.5-0.2-0.7,0l-10.8,10.8l-2.3,0.3l0.3-2.3l10.8-10.8c0.2-0.2,0.2-0.5,0-0.7c-0.2-0.2-0.5-0.2-0.7,0l-10.8,10.8l-1.5,0.2
-                	l13.4-13.4l4.8,4.8l-13.4,13.4L-344.2,317z M-328.9,303.2l-4.8-4.8l0.7-0.7l4.8,4.8L-328.9,303.2z"/>
+                  l-1.7,7.2v0.1l0,0c0,0.1,0,0.1,0,0.1s0,0,0,0.1c0,0.1,0.1,0.1,0.1,0.1c0.1,0.1,0.1,0.1,0.1,0.1c0.1,0,0.1,0.1,0.2,0.1
+                  c0.1,0,0.1,0,0.1,0l7.2-1.7c0,0,0,0,0.1,0c0,0,0,0,0.1,0s0.1-0.1,0.1-0.1s0,0,0.1,0l0,0l17.5-17.5
+                  C-325.5,301.1-325.5,298.3-327.2,296.6z M-327.9,297.3c1.2,1.2,1.3,3.1,0.3,4.4l-4.7-4.7C-331,296-329.1,296.1-327.9,297.3z
+                   M-330.3,304.5l-4.8-4.8l0.7-0.7l4.8,4.8L-330.3,304.5z M-350.3,319.7c-0.2-0.2-0.5-0.2-0.7,0l-0.4,0.4l1.2-5.2l2.2-0.3l-0.3,2.5
+                  v0.1v0.1c0,0,0,0,0,0.1v0.1c0,0,0,0.1,0.1,0.1c0,0,0,0.1,0.1,0.1l0.1,0.1c0,0,0.1,0,0.1,0.1c0,0,0.1,0,0.1,0h0.1h0.1l0,0l0,0l0,0
+                  l0,0h0.1l2.5-0.3l-0.3,2.2l-5.2,1.2l0.4-0.4C-350.1,320.2-350.1,319.9-350.3,319.7z M-344.2,317l10.8-10.8c0.2-0.2,0.2-0.5,0-0.7
+                  c-0.2-0.2-0.5-0.2-0.7,0l-10.8,10.8l-2.3,0.3l0.3-2.3l10.8-10.8c0.2-0.2,0.2-0.5,0-0.7c-0.2-0.2-0.5-0.2-0.7,0l-10.8,10.8l-1.5,0.2
+                  l13.4-13.4l4.8,4.8l-13.4,13.4L-344.2,317z M-328.9,303.2l-4.8-4.8l0.7-0.7l4.8,4.8L-328.9,303.2z"/>
             </svg>
           </div>
             EDIT
           </div>
-        </a>
-
-        <a href="view.html">
+          </a>
+          <a href="view.html">
           <div class="col-md-12 col-xs-4 text-center option">
             <div class="col-md-12" style="padding:3px">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                	 width="50.8px" height="31.2px" viewBox="68 291 50.8 31.2" style="enable-background:new 68 291 50.8 31.2;" xml:space="preserve"
-                	>
+                   width="50.8px" height="31.2px" viewBox="68 291 50.8 31.2" style="enable-background:new 68 291 50.8 31.2;" xml:space="preserve"
+                  >
                 <style type="text/css">
-                	.st0{fill:#FFFFFF;}
+                  .st0{fill:#FFFFFF;}
                 </style>
                 <g>
-                	<path class="st0" d="M93.4,292.2c-9.2,0-17.5,5-23.7,13.2c-0.5,0.7-0.5,1.6,0,2.3c6.1,8.2,14.5,13.2,23.7,13.2s17.5-5,23.7-13.2
-                		c0.5-0.7,0.5-1.6,0-2.3C110.9,297.3,102.6,292.2,93.4,292.2z M94.1,316.7C88,317,83,312,83.3,305.9c0.3-5,4.4-9.1,9.4-9.4
-                		c6.1-0.4,11.1,4.6,10.7,10.7C103.2,312.3,99.1,316.3,94.1,316.7z M93.8,312c-3.3,0.2-6-2.5-5.8-5.8c0.2-2.7,2.4-4.9,5.1-5.1
-                		c3.3-0.2,6,2.5,5.8,5.8C98.7,309.6,96.5,311.8,93.8,312z"/>
+                  <path class="st0" d="M93.4,292.2c-9.2,0-17.5,5-23.7,13.2c-0.5,0.7-0.5,1.6,0,2.3c6.1,8.2,14.5,13.2,23.7,13.2s17.5-5,23.7-13.2
+                    c0.5-0.7,0.5-1.6,0-2.3C110.9,297.3,102.6,292.2,93.4,292.2z M94.1,316.7C88,317,83,312,83.3,305.9c0.3-5,4.4-9.1,9.4-9.4
+                    c6.1-0.4,11.1,4.6,10.7,10.7C103.2,312.3,99.1,316.3,94.1,316.7z M93.8,312c-3.3,0.2-6-2.5-5.8-5.8c0.2-2.7,2.4-4.9,5.1-5.1
+                    c3.3-0.2,6,2.5,5.8,5.8C98.7,309.6,96.5,311.8,93.8,312z"/>
                 </g>
             </svg>
           </div>
@@ -89,12 +88,11 @@
 
       </div>
 
-      <div class="col-md-11 col-md-offset-1 col-xs-12 col-sm-12">
-          <div class="col-md-10 col-md-push-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0" style="margin:0 auto">
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3 col-sm-offset-2" style="margin-top:10vh">
-                <label for="">Search for Student's with their id</label>
-
+      <div class="col-md-11 col-md-offset-1 col-sm-12 col-xs-12">
+        <div class="col-md-10 col-md-push-1 col-sm-12 col-xs-12" style="margin:0 auto">
+          <div class="row" style="padding:10px">
+              <div class="col-md-6 col-md-offset-3 col-sm-offset-2 search-container" >
+                <label for="">Paste the Student's  <b>CORRECT _id</b> and click <b>Go!</b> to edit.  </label>
               <div class="input-group">
                 <input type="text" class="form-control" id="search" placeholder="Student No.">
                 <span class="input-group-btn">
@@ -102,73 +100,75 @@
                 </span>
             </div>
           </div>
-        </div>
 
-         <div class="col-md-12 " style="margin-top:8vh">
-          <form class="" action="index.html" method="post">
-            <div class="col-md-1 col-md-offset-0 col-sm-6 col-sm-offset-3">
-              <div class="input-group">
-                <label for="">studentNo</label>
-                <input type="number" id="studentNo" class="form-control" placeholder="">
-              </div>
-            </div>
-
+         <div class="col-md-12 form-container" >
             <div class="col-md-4 col-sm-12">
               <div class="input-group">
                 <label for="">Firstname</label>
-                <input type="text" id="fname" class="form-control" placeholder="">
+                <input type="text" id="firstname" class="form-control" placeholder="">
               </div>
             </div>
 
             <div class="col-md-4 col-sm-12">
               <div class="input-group">
                 <label for="">Lastname</label>
-                <input type="text" id="lname" class="form-control" placeholder="">
+                <input type="text" id="lastname" class="form-control" placeholder="">
               </div>
             </div>
 
-            <div class="col-md-3 ">
-              <label for="">Class (Jss1, Jss2, Jss3)</label>
-              <input type="text" id="class" name="" class="form-control" value="">
+            <div class="col-md-2 col-sm-6 col-xs-6">
+              <label for="">Class: <span class="update" id="old_class"> </span> </label>
+              <select class="form-control" id="class">
+                <option value="1">Jss1</option>
+                <option value="2">Jss2</option>
+                <option value="3">Jss3</option>
+                <option value="3">SS1</option>
+                <option value="3">SS2</option>
+                <option value="3">SS3</option>
+              </select>
             </div>
 
-            <div class="col-md-10 text-center " style="padding-top: 5vh">
-              <button type="button" class="btn-default col-md-3  btn btn-default add-button" name="button"
-               onclick="update()" style="margin: 5px">
+            <div class="col-md-2 col-sm-6 col-xs-6 ">
+              <label for="">Grade: <span class="update" id="old_grade"></span></label>
+              <select class="form-control" id="grade">
+                <option value="1">A1</option>
+                <option value="2">B2</option>
+                <option value="3">B3</option>
+                <option value="3">C4</option>
+                <option value="3">C5</option>
+                <option value="3">C6</option>
+                <option value="3">D7</option>
+                <option value="3">E8</option>
+                <option value="3">F9</option>
+              </select>
+            </div>
+
+            <div class="col-md-10 text-center col-sm-12 col-xs-12" style="margin-top:5vh">
+              <button type="button" class="btn-default col-md-3  btn btn-default gen-button" name="button" onclick="update()" style="margin: 5px">
                 Update
               </button>
 
-              <button type="button" class="col-md-3 btn btn-default add-button" name="button" onclick="remove()" style="margin: 5px">
+              <button type="button" class="col-md-3 btn btn-default gen-button" name="button" onclick="remove()" style="margin: 5px">
                 delete
               </button>
             </div>
 
-            <div class="col-md-6 col-md-offset-3 ok" id="ok">
+
+            <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12 ok" id="ok">
                   <div class="alert alert-success alert-dismissable fade in text-center">
                     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                    <strong>Updated</strong> 
+                    <strong>Updated</strong>
                   </div>
                   </div>
 
-                   <div class="col-md-6 col-md-offset-3 delete" id="delete">
+                   <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12 delete" id="delete" style="margin-top:-10vh">
                   <div class="alert alert-success alert-dismissable fade in text-center">
                     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                    <strong>Deleted</strong> 
+                    <strong>Deleted</strong>
                   </div>
                   </div>
 
-
-
-                  <div class="col-md-12 error" id="error">
-                    <div class="alert alert-danger alert-dismissable fade in">
-                      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                      <strong>Danger!</strong> This alert box could indicate a dangerous or potentially negative action.
-                    </div>
                   </div>
-
-
-
-          </form>
         </div>
       </div>
 
