--- a/pages/view.html
+++ b/pages/view.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <style type="text/css">
-      table, th, td 
+      table, th, td
         {
             margin:10px 0;
             border:solid 1px #333;
@@ -23,7 +23,7 @@
         th{
           padding:10px;
         }
-      
+
     </style>
 
   </head>
@@ -103,9 +103,9 @@
       <div class="col-md-11 col-md-offset-1">
           <div class="col-md-10 col-md-push-1" style="margin:0 auto">
             <div class="row">
-              <h4 style="margin-top: 5vh"> To edit the file, Copy the <b>_id</b> of the row you want to edit .
+              <h4 style="margin-top: 5vh"> Copy the Student's <b>_id CORRECTLY </b> to get access to edit the values.
               <div class="col-md-12" id="showData" style="margin-top:2vh">
-                  
+
                 <small>Loading...</small>
 
               </div>
