--- a/pages/view.html
+++ b/pages/view.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
 
-    <link href="https://fonts.googleapis.com/css?family=nunito" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/bootstrap.css">
+     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
 
     <style type="text/css">
@@ -27,7 +25,7 @@
     </style>
 
   </head>
-  <body onload="all()">
+  <body onload="view()">
     <div class="container-fluid" style="padding:0px;">
       <div class="col-md-12 header">
         School Management
